Add rule for weak diffie-hellman keys in SSLContext
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -103,11 +103,14 @@ precli.rules.python =
     # precli/rules/python/stdlib/ssl/insecure_tls_version.py
     PY017 = precli.rules.python.stdlib.ssl.insecure_tls_version:InsecureTlsVersion
 
+    # precli/rules/python/stdlib/ssl/sslcontext_weak_key.py
+    PY018 = precli.rules.python.stdlib.ssl.sslcontext_weak_key:SslContextWeakKey
+
     # precli/rules/python/stdlib/telnetlib/telnetlib_cleartext.py
-    PY018 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
+    PY019 = precli.rules.python.stdlib.telnetlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/stdlib/tempfile/mktemp_race_condition.py
-    PY019 = precli.rules.python.stdlib.tempfile.mktemp_race_condition:MktempRaceCondition
+    PY020 = precli.rules.python.stdlib.tempfile.mktemp_race_condition:MktempRaceCondition
 
     # precli/rules/python/aiohttp/no_certificate_verify.py
     PY501 = precli.rules.python.aiohttp.no_certificate_verify:NoCertificateVerify
