Fix reference to doc to docs for RTD
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,7 @@ build:
     python: "3.12"
 
 sphinx:
-  configuration: doc/source/conf.py
+  configuration: docs/source/conf.py
 
 python:
   install:
