Prohibit GPL based licenses being introduced
Deny licenses that are GPL based.

Signed-off-by: Eric Brown <ericwb@users.noreply.github.com>

--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -12,3 +12,5 @@ jobs:
         uses: actions/checkout@v4
       - name: 'Dependency Review'
         uses: actions/dependency-review-action@v4
+        with:
+          deny-licenses: GPL-2.0-only, GPL-2.0-or-later, GPL-3.0, GPL-3.0-or-later, LGPL-2.1-only,  LGPL-2.1-or-later,  LGPL-3.0-only,  LGPL-3.0-or-later
