--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,10 @@ classifier =
 project_urls =
     Release notes = https://github.com/securesauce/precli/releases
 
+[options.extras_require]
+thirdparty =
+    precli-thirdparty @ git+https://github.com/securesauce/precli-thirdparty@main
+
 [entry_points]
 console_scripts =
     precli = precli.cli.main:main
