--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ classifier =
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
     Intended Audience :: Developers
+    Operating System :: MacOS :: MacOS X
     Operating System :: POSIX :: Linux
     Programming Language :: Python
     Programming Language :: Python :: 3
