--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# Copyright 2022 Secure Saurce LLC
+# Copyright 2024 Secure Saurce LLC
 
 [tox]
 minversion = 3.2.0
@@ -13,10 +13,7 @@ deps =
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-    find precli -type f -name "*.pyc" -delete
     stestr run {posargs}
-allowlist_externals =
-    find
 passenv = http_proxy, HTTP_PROXY, https_proxy, HTTPS_PROXY, no_proxy, NO_PROXY
 
 [testenv:format]
@@ -42,3 +39,8 @@ commands = -pylint --rcfile=pylintrc precli
 deps = -r{toxinidir}/docs/requirements.txt
 commands=
     sphinx-build docs/source docs/build
+
+[testenv:clean]
+skip_install = true
+deps = pyclean
+commands = pyclean {posargs:. --debris}
