Use RST instead of markdown for README
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = precli
 summary = Static analysis security tool command line
 description_file =
-    README.md
+    README.rst
 author = Secure Sauce
 classifier =
     Development Status :: 5 - Production/Stable
