--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -7,7 +7,7 @@ jobs:
     name: Build and publish to PyPI
     runs-on: ubuntu-latest
     environment:
-      name: PyPI
+      name: pypi
       url: https://pypi.org/project/bandit
     permissions:
       id-token: write
