Use the correct package name for repos
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/project/bandit
+      url: https://pypi.org/project/precli
     permissions:
       id-token: write
     steps:
