Trigger publish to Test PyPI on release publish
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,6 +1,9 @@
 name: Publish to Test PyPI
 
-on: workflow_dispatch
+on:
+  release:
+    types: [published]
+  workflow_dispatch:
 
 jobs:
   build-n-publish:
