--- a/setup.cfg
+++ b/setup.cfg
@@ -63,47 +63,50 @@ precli.rules.python =
     # precli/rules/python/stdlib/hmac_weak_hash.py
     PY006 = precli.rules.python.stdlib.hmac_weak_hash:HmacWeakHash
 
+    # precli/rules/python/stdlib/http_url_secret.py
+    PY007 = precli.rules.python.stdlib.http_url_secret:HttpUrlSecret
+
     # precli/rules/python/stdlib/imaplib_cleartext.py
-    PY007 = precli.rules.python.stdlib.imaplib_cleartext:ImapCleartext
+    PY008 = precli.rules.python.stdlib.imaplib_cleartext:ImapCleartext
 
     # precli/rules/python/stdlib/json_load.py
-    PY008 = precli.rules.python.stdlib.json_load:JsonLoad
+    PY009 = precli.rules.python.stdlib.json_load:JsonLoad
 
     # precli/rules/python/stdlib/logging_insecure_listen_config.py
-    PY009 = precli.rules.python.stdlib.logging_insecure_listen_config:InsecureListenConfig
+    PY010 = precli.rules.python.stdlib.logging_insecure_listen_config:InsecureListenConfig
 
     # precli/rules/python/stdlib/marshal_load.py
-    PY010 = precli.rules.python.stdlib.marshal_load:MarshalLoad
+    PY011 = precli.rules.python.stdlib.marshal_load:MarshalLoad
 
     # precli/rules/python/stdlib/nntplib_cleartext.py
-    PY011 = precli.rules.python.stdlib.nntplib_cleartext:NntpCleartext
+    PY012 = precli.rules.python.stdlib.nntplib_cleartext:NntpCleartext
 
     # precli/rules/python/stdlib/pickle_load.py
-    PY012 = precli.rules.python.stdlib.pickle_load:PickleLoad
+    PY013 = precli.rules.python.stdlib.pickle_load:PickleLoad
 
     # precli/rules/python/stdlib/pop_cleartext.py
-    PY013 = precli.rules.python.stdlib.poplib_cleartext:PopCleartext
+    PY014 = precli.rules.python.stdlib.poplib_cleartext:PopCleartext
 
     # precli/rules/python/stdlib/shelve_open.py
-    PY014 = precli.rules.python.stdlib.shelve_open:ShelveOpen
+    PY015 = precli.rules.python.stdlib.shelve_open:ShelveOpen
 
     # precli/rules/python/stdlib/smtplib_cleartext.py
-    PY015 = precli.rules.python.stdlib.smtplib_cleartext:SmtpCleartext
+    PY016 = precli.rules.python.stdlib.smtplib_cleartext:SmtpCleartext
 
     # precli/rules/python/stdlib/ssl_create_unverified_context.py
-    PY016 = precli.rules.python.stdlib.ssl_create_unverified_context:CreateUnverifiedContext
+    PY017 = precli.rules.python.stdlib.ssl_create_unverified_context:CreateUnverifiedContext
 
     # precli/rules/python/stdlib/ssl_insecure_tls_version.py
-    PY017 = precli.rules.python.stdlib.ssl_insecure_tls_version:InsecureTlsVersion
+    PY018 = precli.rules.python.stdlib.ssl_insecure_tls_version:InsecureTlsVersion
 
     # precli/rules/python/stdlib/ssl_context_weak_key.py
-    PY018 = precli.rules.python.stdlib.ssl_context_weak_key:SslContextWeakKey
+    PY019 = precli.rules.python.stdlib.ssl_context_weak_key:SslContextWeakKey
 
     # precli/rules/python/stdlib/telnetlib_cleartext.py
-    PY019 = precli.rules.python.stdlib.telnetlib_cleartext:TelnetlibCleartext
+    PY020 = precli.rules.python.stdlib.telnetlib_cleartext:TelnetlibCleartext
 
     # precli/rules/python/stdlib/tempfile_mktemp_race_condition.py
-    PY020 = precli.rules.python.stdlib.tempfile_mktemp_race_condition:MktempRaceCondition
+    PY021 = precli.rules.python.stdlib.tempfile_mktemp_race_condition:MktempRaceCondition
 
 [build_sphinx]
 all_files = 1
