More SARIF cleanup
* Pass more metadata to the tool component (full description, help_uri,
  message_strings, etc)
* Return rule metadata in the tool component
* Clean up errors from validation
* Use proper GA'd schema
* Adjust start and end column to match expected by schema

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,8 @@ classifier =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.12
     Topic :: Security
+url = https://github.com/securesauce/precli
+download_url = https://pypi.org/project/precli/#files
 project_urls =
     Release notes = https://github.com/securesauce/precli/releases
 
