Switch docs to use mkdocs
This large change switches all docs from RsT format to markdown.
It then builds the docs with mkdocs instead of sphinx.

This helps use the docstrings as markdown for import into things
like GitHub descriptions and help.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/tox.ini
+++ b/tox.ini
@@ -37,8 +37,8 @@ commands = -pylint --rcfile=pylintrc precli
 
 [testenv:docs]
 deps = -r{toxinidir}/docs/requirements.txt
-commands=
-    sphinx-build docs/source docs/build
+commands =
+    mkdocs build
 
 [testenv:clean]
 skip_install = true
