Add new rule to check for no context being passed to FTP_TLS
If a context of unset or None is passed to FTP_TLS, the implementation
will default to creating an unverified context. This means the client
connection will not properly verify the server its connecting to.

Closes: #341

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -110,6 +110,9 @@ precli.rules.python =
     # precli/rules/python/stdlib/tempfile_mktemp_race_condition.py
     PY021 = precli.rules.python.stdlib.tempfile_mktemp_race_condition:MktempRaceCondition
 
+    # precli/rules/python/stdlib/ftplib_unverified_context.py
+    PY022 = precli.rules.python.stdlib.ftplib_unverified_context:FtplibUnverifiedContext
+
 [build_sphinx]
 all_files = 1
 build-dir = docs/build
