Add rule on argparse to check for an argument of password
Sensitive data like a password should not be arguments of a CLI.
They would end up appearing in the CLI history, ps output, logs, etc.

Closes: #339

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -125,6 +125,9 @@ precli.rules.python =
     # precli/rules/python/stdlib/smtplib_unverified_context.py
     PY026 = precli.rules.python.stdlib.smtplib_unverified_context:SmtplibUnverifiedContext
 
+    # precli/rules/python/stdlib/argparse_sensitive_info.py
+    PY027 = precli.rules.python.stdlib.argparse_sensitive_info:ArgparseSensitiveInfo
+
 [build_sphinx]
 all_files = 1
 build-dir = docs/build
