--- a/setup.cfg
+++ b/setup.cfg
@@ -131,5 +131,8 @@ precli.rules.python =
     # precli/rules/python/stdlib/secrets_weak_token.py
     PY028 = precli.rules.python.stdlib.secrets_weak_token:SecretsWeakToken
 
+    # precli/rules/python/stdlib/socket_unrestricted_bind.py
+    PY029 = precli.rules.python.stdlib.socket_unrestricted_bind:SocketUnrestrictedBind
+
 [build_sphinx]
 all_files = 1
