Add rule for socketserver unrestricted bind
Checks for socketserver usage that binds sockets with an unrestricted
address such as "", "0.0.0.0", or "::" (IPv6).

Part of #225

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -133,5 +133,8 @@ precli.rules.python =
     # precli/rules/python/stdlib/socket_unrestricted_bind.py
     PY029 = precli.rules.python.stdlib.socket_unrestricted_bind:SocketUnrestrictedBind
 
+    # precli/rules/python/stdlib/socketserver_unrestricted_bind.py
+    PY030 = precli.rules.python.stdlib.socketserver_unrestricted_bind:SocketserverUnrestrictedBind
+
 [build_sphinx]
 all_files = 1
