Add new rule for http.server unrestricted bind
This checks for socket binds in the http.server module that use
unrestricted IP addresses ("0.0.0.0" or "::").

Partially implements #225

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -136,5 +136,8 @@ precli.rules.python =
     # precli/rules/python/stdlib/socketserver_unrestricted_bind.py
     PY030 = precli.rules.python.stdlib.socketserver_unrestricted_bind:SocketserverUnrestrictedBind
 
+    # precli/rules/python/stdlib/http_server_unrestricted_bind.py
+    PY031 = precli.rules.python.stdlib.http_server_unrestricted_bind:HttpServerUnrestrictedBind
+
 [build_sphinx]
 all_files = 1
