Add rule for xmlrpc.server unrestricted bind
Checks xmlrpc.server classes that also binds sockets with parameters
that allow unrestricted addresses (ANY) as input.

Closes: #225

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -139,5 +139,8 @@ precli.rules.python =
     # precli/rules/python/stdlib/http_server_unrestricted_bind.py
     PY031 = precli.rules.python.stdlib.http_server_unrestricted_bind:HttpServerUnrestrictedBind
 
+    # precli/rules/python/stdlib/xmlrpc_server_unrestricted_bind.py
+    PY032 = precli.rules.python.stdlib.xmlrpc_server_unrestricted_bind:XmlrpcServerUnrestrictedBind
+
 [build_sphinx]
 all_files = 1
