Add new rule to detect regex denial-of-service patterns
New rule that checks various functions of the re module for
suspicious patterns that might cause catastrophic backtracking.

Closes: #371

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -142,5 +142,8 @@ precli.rules.python =
     # precli/rules/python/stdlib/xmlrpc_server_unrestricted_bind.py
     PY032 = precli.rules.python.stdlib.xmlrpc_server_unrestricted_bind:XmlrpcServerUnrestrictedBind
 
+    # precli/rules/python/stdlib/re_denial_of_service.py
+    PY033 = precli.rules.python.stdlib.re_denial_of_service:ReDenialOfService
+
 [build_sphinx]
 all_files = 1
