Pin the dependencies in requirements.txt
For build reproducibility, releases should have pinned dependencies.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -13,4 +13,5 @@ jobs:
       - name: 'Dependency Review'
         uses: actions/dependency-review-action@v4
         with:
-          deny-licenses: GPL-2.0-only, GPL-2.0-or-later, GPL-3.0, GPL-3.0-or-later, LGPL-2.1-only,  LGPL-2.1-or-later,  LGPL-3.0-only,  LGPL-3.0-or-later
+          allow-dependencies-licenses: 'pkg:pypi/cwe2'
+          deny-licenses: GPL-2.0-only, GPL-2.0-or-later, GPL-3.0, GPL-3.0-or-later, LGPL-2.1-only, LGPL-2.1-or-later, LGPL-3.0-only, LGPL-3.0-or-later
