Rule to check for insufficient key size to HMAC
HMAC algorithms require a minimum key size that corresponds to
their digest size. Using a size less than the digest size is
considered weak.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -145,5 +145,8 @@ precli.rules.python =
     # precli/rules/python/stdlib/re_denial_of_service.py
     PY033 = precli.rules.python.stdlib.re_denial_of_service:ReDenialOfService
 
+    # precli/rules/python/stdlib/hmac_weak_key.py
+    PY034 = precli.rules.python.stdlib.hmac_weak_key:HmacWeakKey
+
 [build_sphinx]
 all_files = 1
