Add rule to check for improper random generator usage
Specifically in the hashlib module, it specifies that secure
alternatives to the random module should be used for crypto
functions.

This rule checks various hashlib functions where a salt is
provided via an insecure random function such as random.randbytes()
or ssl.RAND_bytes()

Closes #229

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -148,5 +148,8 @@ precli.rules.python =
     # precli/rules/python/stdlib/hmac_weak_key.py
     PY034 = precli.rules.python.stdlib.hmac_weak_key:HmacWeakKey
 
+    # precli/rules/python/stdlib/hashlib_improper_prng.py
+    PY035 = precli.rules.python.stdlib.hashlib_improper_prng:HashlibImproperPrng
+
 [build_sphinx]
 all_files = 1
