Create java parser and example rule with test
This introduces the parser for Java files. It also provides proof
of operation with a couple examples to run in the tests for the
weak cipher rule.

Closes #413

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,10 @@ precli.rules.go =
     # precli/rules/go/stdlib/crypto_weak_key.py
     GO003 = precli.rules.go.stdlib.crypto_weak_key:WeakKey
 
+precli.rules.java =
+    # precli/rules/java/stdlib/crypto_weak_cipher.py
+    JAV001 = precli.rules.java.stdlib.crypto_weak_cipher:WeakCipher
+
 precli.rules.python =
     # precli/rules/python/stdlib/assert.py
     PY001 = precli.rules.python.stdlib.assert:Assert
