Add rule for weak hashes in java.security
Checks for MD2, MD5, and SHA1 used as algorithm parameter in
MessageDigest.getInstance().

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,8 +46,11 @@ precli.rules.go =
     GO003 = precli.rules.go.stdlib.crypto_weak_key:WeakKey
 
 precli.rules.java =
-    # precli/rules/java/stdlib/crypto_weak_cipher.py
-    JAV001 = precli.rules.java.stdlib.crypto_weak_cipher:WeakCipher
+    # precli/rules/java/stdlib/javax_crypto_weak_cipher.py
+    JAV001 = precli.rules.java.stdlib.javax_crypto_weak_cipher:WeakCipher
+
+    # precli/rules/java/stdlib/java_security_weak_hash.py
+    JAV002 = precli.rules.java.stdlib.java_security_weak_hash:MessageDigestWeakHash
 
 precli.rules.python =
     # precli/rules/python/stdlib/assert.py
