Add new Java rule to check for a weak key
Checks for RSA and DSA keys where the lengths are too short.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,9 @@ precli.rules.java =
     # precli/rules/java/stdlib/java_security_weak_hash.py
     JAV002 = precli.rules.java.stdlib.java_security_weak_hash:MessageDigestWeakHash
 
+    # precli/rules/java/stdlib/java_security_weak_key.py
+    JAV003 = precli.rules.java.stdlib.java_security_weak_key:KeyPairGeneratorWeakKey
+
 precli.rules.python =
     # precli/rules/python/stdlib/assert.py
     PY001 = precli.rules.python.stdlib.assert:Assert
