--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,9 @@ precli.rules.java =
     # precli/rules/java/stdlib/java_security_weak_key.py
     JAV003 = precli.rules.java.stdlib.java_security_weak_key:KeyPairGeneratorWeakKey
 
+    # precli/rules/java/stdlib/java_security_weak_random.py
+    JAV004 = precli.rules.java.stdlib.java_security_weak_random:SecureRandomWeakRandom
+
 precli.rules.python =
     # precli/rules/python/stdlib/assert.py
     PY001 = precli.rules.python.stdlib.assert:Assert
