Add rule to use of Cookie with secure flag false
When using session cookies, the secure flag should be set to true
for sensitive data to ensure the data is protected. It's also good
practice to always set it to true.

This rule checks for a servlet cookie with a call to method
setSecure with value false.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,9 @@ precli.rules.java =
     # precli/rules/java/stdlib/java_security_weak_random.py
     JAV004 = precli.rules.java.stdlib.java_security_weak_random:SecureRandomWeakRandom
 
+    # precli/rules/java/stdlib/javax_servlet_http_insecure_cookie.py
+    JAV005 = precli.rules.java.stdlib.javax_servlet_http_insecure_cookie:InsecureCookie
+
 precli.rules.python =
     # precli/rules/python/stdlib/assert.py
     PY001 = precli.rules.python.stdlib.assert:Assert
