Add Java rule for insecure java.net.HttpCookie
Similar to javax.servlet.http.Cookie, the java.net.HttpCookie
is also a class whether the contents of the cookie can be marked
secure. This rule advises to always set secure to true.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,9 @@ precli.rules.java =
     # precli/rules/java/stdlib/javax_servlet_http_insecure_cookie.py
     JAV005 = precli.rules.java.stdlib.javax_servlet_http_insecure_cookie:InsecureCookie
 
+    # precli/rules/java/stdlib/java_net_insecure_cookie.py
+    JAV006 = precli.rules.java.stdlib.java_net_insecure_cookie:InsecureCookie
+
 precli.rules.python =
     # precli/rules/python/stdlib/assert.py
     PY001 = precli.rules.python.stdlib.assert:Assert
