Migrate from stestr to pytests
This large commit switches over the test framework from stestr
to the more common and popular pytest. We're able to drop a
test dependency of parameterized because pytest provides the
same function.

This will enable us to do performance benchmark testing later
using pytest.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ deps =
        -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 commands =
-    stestr run {posargs}
+    pytest {posargs}
 passenv = http_proxy, HTTP_PROXY, https_proxy, HTTPS_PROXY, no_proxy, NO_PROXY
 
 [testenv:format]
@@ -44,3 +44,9 @@ commands =
 skip_install = true
 deps = pyclean
 commands = pyclean {posargs:. --debris}
+
+[pytest]
+minversion = 6.0
+addopts = -v
+testpaths =
+    tests
