Add email and license classifier
Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
 [metadata]
 name = precli
-summary = Static analysis security tool command line
+summary = Precaution security static analysis command line
 description_file =
     README.rst
 author = Secure Sauce
+author_email = info@securesauce.dev
+license = Other/Proprietary License
 classifier =
     Development Status :: 5 - Production/Stable
     Environment :: Console
