Add new rule around loose permission in os module
Any usage of os.chmod and the like, the mode for the permissions
for a file should be checked to ensure the permissions are not
considered loose or incorrect. Incorrect in this case is using
world write, group write, world execute, group execute. Care
should be taken when using those.

Partially-resolves: #217

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -185,3 +185,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/hashlib_improper_prng.py
     PY035 = precli.rules.python.stdlib.hashlib_improper_prng:HashlibImproperPrng
+
+    # precli/rules/python/stdlib/os_loose_file_perm.py
+    PY036 = precli.rules.python.stdlib.os_loose_file_perm:OsLooseFilePermissions
