Use mkdocs-material for docs
The mkdocs-meterial plugin gives us a number of added features
over the standard mkdocs markdown format.

Namely, the features included in this commit are:
* Line numbers on code blocks
* Copy button to copy code blocks
* Switch to material theme

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,9 +4,13 @@ edit_uri: blob/main/docs/
 copyright: Copyright 2024 Secure Sauce LLC
 
 theme:
-  name: "readthedocs"
+  name: "material"
   locale: en
   highlightjs: true
+  features:
+    - content.code.copy
+    - content.code.select
+    - content.code.annotate
 
 plugins:
   - mkdocstrings
@@ -19,3 +23,12 @@ nav:
     - getting-started.md
   - Rules:
     - Rules: rules.md
+
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
