--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,10 +17,9 @@ plugins:
   - search
 
 nav:
-  - Home:
-    - index.md
-  - 'User Guide':
-    - getting-started.md
+  - Home: index.md
+  - getting-started.md
+  - 'CLI Reference': man/precli.md
   - Rules:
     - Rules: rules.md
 
@@ -34,3 +33,8 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
+  - attr_list
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
