Use extension loader to load renderers
The renderers should ideally be loaded via the extension mechanism
rather than hard-coding the load of each class.

This also enables the ability to add future renderers without
changes to the code that loads them.

Closes #541

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,19 @@ project_urls =
 console_scripts =
     precli = precli.cli.main:main
 
+precli.renderers =
+    # precli/renderers/detailed.py
+    detailed = precli.renderers.detailed:Detailed
+
+    # precli/renderers/json.py
+    json = precli.renderers.json:Json
+
+    # precli/renderers/markdown.py
+    markdown = precli.renderers.markdown:Markdown
+
+    # precli/renderers/plain.py
+    plain = precli.renderers.plain:Plain
+
 precli.parsers =
     # precli/parsers/go.py
     go = precli.parsers.go:Go
