--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ ignorelib==0.3.0
 requests==2.32.3
 sarif-om==1.0.4
 jschema-to-python==1.2.3
-git+https://github.com/tree-sitter/tree-sitter-go@v0.21.0
-git+https://github.com/tree-sitter/tree-sitter-java@v0.21.0
-git+https://github.com/tree-sitter/tree-sitter-python@v0.21.0
+tree-sitter-go==0.21.0
+tree-sitter-java==0.21.0
+tree-sitter-python==0.21.0; sys_platform != "darwin" and platform_machine != "arm64"
+git+https://github.com/tree-sitter/tree-sitter-python@v0.21.0; sys_platform == "darwin" and platform_machine == "arm64"
