--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ classifier =
     Intended Audience :: Developers
     Operating System :: MacOS
     Operating System :: POSIX :: Linux
+    Operating System :: Microsoft :: Windows
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.12
