New rule for pathlib.Path usage with loose permissions
This rule adds checks for usage of pathlib.Path functions where
a file mode can be passed and the file mode is considered loose
permissions. It checks functions chmod, lchmod, mkdir, and touch.

Unit tests and documentation also added.

Closes: #217

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -188,3 +188,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/os_loose_file_perm.py
     PY036 = precli.rules.python.stdlib.os_loose_file_perm:OsLooseFilePermissions
+
+    # precli/rules/python/stdlib/pathlib_loose_file_perm.py
+    PY037 = precli.rules.python.stdlib.pathlib_loose_file_perm:PathlibLooseFilePermissions
