New python rule to check for setuid(0)
Setting the current process to user ID 0 (root) elevates
the process to run as root which can be particularly risky
for an application.

Partially-resolves #587

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -191,3 +191,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/pathlib_loose_file_perm.py
     PY037 = precli.rules.python.stdlib.pathlib_loose_file_perm:PathlibLooseFilePermissions
+
+    # precli/rules/python/stdlib/os_setuid_root.py
+    PY038 = precli.rules.python.stdlib.os_setuid_root:OsSetuidRoot
