New Golang rule to check for Setuid to root user
Similar to rule PY038, this rule checks Go code for syscall
Setuid where the uid is set to 0 (aka root user).

Rule ID: GO004

Closes: #587

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,6 +61,9 @@ precli.rules.go =
     # precli/rules/go/stdlib/crypto_weak_key.py
     GO003 = precli.rules.go.stdlib.crypto_weak_key:WeakKey
 
+    # precli/rules/go/stdlib/syscall_setuid_root.py
+    GO004 = precli.rules.go.stdlib.syscall_setuid_root:SyscallSetuidRoot
+
 precli.rules.java =
     # precli/rules/java/stdlib/javax_crypto_weak_cipher.py
     JAV001 = precli.rules.java.stdlib.javax_crypto_weak_cipher:WeakCipher
