New rule to check socket.create_connection with no timeout
This rule checks for cases where socket.create_connection and
a parameter for the timeout is not set. If set to None or unset,
the blocking socket can potentially hang indefinitely.

Closes: #519

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -197,3 +197,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/os_setuid_root.py
     PY038 = precli.rules.python.stdlib.os_setuid_root:OsSetuidRoot
+
+    # precli/rules/python/stdlib/socket_no_timeout.py
+    PY039 = precli.rules.python.stdlib.socket_no_timeout:SocketNoTimeout
