--- a/setup.cfg
+++ b/setup.cfg
@@ -200,3 +200,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/socket_no_timeout.py
     PY039 = precli.rules.python.stdlib.socket_no_timeout:SocketNoTimeout
+
+    # precli/rules/python/stdlib/smtplib_no_timeout.py
+    PY040 = precli.rules.python.stdlib.smtplib_no_timeout:SmtplibNoTimeout
