New Python rule to check for imaplib use without a timeout
New rule PY041.

When imaplib.IMAP4 or IMAP4_SSL are used without specifiying a
timeout, the connections have the potential to block forever.
The default timeout is the global socket timeout setting which
is None by default (effectively no timeout).

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -203,3 +203,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/smtplib_no_timeout.py
     PY040 = precli.rules.python.stdlib.smtplib_no_timeout:SmtplibNoTimeout
+
+    # precli/rules/python/stdlib/imaplib_no_timeout.py
+    PY041 = precli.rules.python.stdlib.imaplib_no_timeout:ImaplibNoTimeout
