New rule to check nntplib for use without a timeout
PY042

Using nntplib classes NNTP and NNTP_SSL without setting a timeout
value will result in using the global default with defaults to
None (block forever). Therefore its important to pass a timeout
value with initializing the class.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -206,3 +206,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/imaplib_no_timeout.py
     PY041 = precli.rules.python.stdlib.imaplib_no_timeout:ImaplibNoTimeout
+
+    # precli/rules/python/stdlib/nntplib_no_timeout.py
+    PY042 = precli.rules.python.stdlib.nntplib_no_timeout:NntplibNoTimeout
