New Python rule to check poplib use without timeout
PY043

The poplib.POP3 and POP3_SSL classes have a timeout argument that
defaults to the socket global timeout which defaults to None. So
a timeout should be set to avoid the POP3 connection from blocking
forever.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -209,3 +209,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/nntplib_no_timeout.py
     PY042 = precli.rules.python.stdlib.nntplib_no_timeout:NntplibNoTimeout
+
+    # precli/rules/python/stdlib/poplib_no_timeout.py
+    PY043 = precli.rules.python.stdlib.poplib_no_timeout:PoplibNoTimeout
