New Python rule checks use of Telnet with no timeout
PY044

The Telnet class and open function on the object has timeout
arguments that if undefined or set to None tell the library
to use the global default timeout which has a default of
None which has the effect of blocking forever.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -212,3 +212,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/poplib_no_timeout.py
     PY043 = precli.rules.python.stdlib.poplib_no_timeout:PoplibNoTimeout
+
+    # precli/rules/python/stdlib/telnetlib_no_timeout.py
+    PY044 = precli.rules.python.stdlib.telnetlib_no_timeout:TelnetlibNoTimeout
