New Python rule checks ftplib use without a timeout
PY045

The ftplib classes FTP and FTP_TLS have timeout arguments that
defaul to the global timeout which defaults to None or blocking
forever. FTP.connect method similarly has a timeout argument.
Its important to always have a reasonable timeout set so the
connections don't block forever.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -215,3 +215,6 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/telnetlib_no_timeout.py
     PY044 = precli.rules.python.stdlib.telnetlib_no_timeout:TelnetlibNoTimeout
+
+    # precli/rules/python/stdlib/ftplib_no_timeout.py
+    PY045 = precli.rules.python.stdlib.ftplib_no_timeout:FtplibNoTimeout
