Show support of Python 3.13
Official tag the precli classifier to show support of Python
3.13 now that testing works successfully.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ classifier =
     Programming Language :: Python
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     Topic :: Security
 url = https://github.com/securesauce/precli
 download_url = https://pypi.org/project/precli/#files
