--- a/setup.cfg
+++ b/setup.cfg
@@ -27,11 +27,12 @@ classifier =
 url = https://github.com/securesauce/precli
 download_url = https://pypi.org/project/precli/#files
 project_urls =
-    Changelog = https://github.com/securesauce/precli/releases/
-    Documentation = https://precli.readthedocs.io/
-    Issues = https://github.com/securesauce/precli/issues/
-    Source = https://github.com/securesauce/precli/
-    Slack = https://secure-sauce.slack.com/
+    Homepage = https://github.com/securesauce/precli
+    Documentation = https://precli.readthedocs.io
+    Source = https://github.com/securesauce/precli
+    Issues = https://github.com/securesauce/precli/issues
+    Changelog = https://github.com/securesauce/precli/releases
+    Slack = https://secure-sauce.slack.com
 
 [entry_points]
 console_scripts =
