--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ project_urls =
 [entry_points]
 console_scripts =
     precli = precli.cli.main:main
+    precli-init = precli.cli.init:main
 
 precli.renderers =
     # precli/renderers/detailed.py
