Move the github target logic into an extension
In order to make the code more cleanly pluggable. This change
moves the discovery of files for both local and github sources
into extensions. This would also permit adding other extensions
for other types of sources.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -234,3 +234,10 @@ precli.rules.python =
 
     # precli/rules/python/stdlib/ssl_no_timeout.py
     PY046 = precli.rules.python.stdlib.ssl_no_timeout:SslNoTimeout
+
+precli.targets =
+    # precli/targets/file.py
+    file = precli.targets.file:File
+
+    # precli/targets/github.py
+    github = precli.targets.github:GitHub
