Add ability to specify a PyPI url as a target
Using the distribution utils extension mechanism, creates a new
extension for PyPI as a target in addition to files and GitHub.

This change downloads the sdist (if exists) from PyPI, extracts
the contents, and analyzes the extract code in a temp directory.

Closes #540

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -241,3 +241,6 @@ precli.targets =
 
     # precli/targets/github.py
     github = precli.targets.github:GitHub
+
+    # precli/targets/pypi.py
+    pypi = precli.targets.pypi:PyPI
