--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,7 @@
 # Copyright 2024 Secure Sauce LLC
 # SPDX-License-Identifier: BUSL-1.1
 mkdocs
-mkdocstrings[python]
-mkdocs-material
 mkdocs-macros-plugin
+mkdocs-material
+mkdocs-git-revision-date-localized-plugin
+mkdocstrings[python]
