--- a/tox.ini
+++ b/tox.ini
@@ -41,6 +41,21 @@ deps = -r{toxinidir}/docs/requirements.txt
 commands =
     mkdocs build
 
+[testenv:i18n]
+allowlist_externals = msgfmt
+commands =
+    msgfmt -o precli/locale/de/LC_MESSAGES/messages.mo precli/locale/de/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/en_GB/LC_MESSAGES/messages.mo precli/locale/en_GB/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/es/LC_MESSAGES/messages.mo precli/locale/es/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/fr/LC_MESSAGES/messages.mo precli/locale/fr/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/it/LC_MESSAGES/messages.mo precli/locale/it/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/ja/LC_MESSAGES/messages.mo precli/locale/ja/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/ko/LC_MESSAGES/messages.mo precli/locale/ko/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/pt_BR/LC_MESSAGES/messages.mo precli/locale/pt_BR/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/ru/LC_MESSAGES/messages.mo precli/locale/ru/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/zh_CN/LC_MESSAGES/messages.mo precli/locale/zh_CN/LC_MESSAGES/messages.po
+    msgfmt -o precli/locale/zh_TW/LC_MESSAGES/messages.mo precli/locale/zh_TW/LC_MESSAGES/messages.po
+
 [testenv:clean]
 skip_install = true
 deps = pyclean
