Add msgfmt step to tox
This new msgfmt step of tox will compile the *.mo files into
*.po binaries suitable to be loaded for specific locale.

This change also add additional strings available to translate.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/tox.ini
+++ b/tox.ini
@@ -41,20 +41,12 @@ deps = -r{toxinidir}/docs/requirements.txt
 commands =
     mkdocs build
 
-[testenv:i18n]
-allowlist_externals = msgfmt
+[testenv:msgfmt]
+allowlist_externals =
+    sh
+    msgfmt
 commands =
-    msgfmt -o precli/locale/de/LC_MESSAGES/messages.mo precli/locale/de/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/en_GB/LC_MESSAGES/messages.mo precli/locale/en_GB/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/es/LC_MESSAGES/messages.mo precli/locale/es/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/fr/LC_MESSAGES/messages.mo precli/locale/fr/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/it/LC_MESSAGES/messages.mo precli/locale/it/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/ja/LC_MESSAGES/messages.mo precli/locale/ja/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/ko/LC_MESSAGES/messages.mo precli/locale/ko/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/pt_BR/LC_MESSAGES/messages.mo precli/locale/pt_BR/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/ru/LC_MESSAGES/messages.mo precli/locale/ru/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/zh_CN/LC_MESSAGES/messages.mo precli/locale/zh_CN/LC_MESSAGES/messages.po
-    msgfmt -o precli/locale/zh_TW/LC_MESSAGES/messages.mo precli/locale/zh_TW/LC_MESSAGES/messages.po
+    sh -c 'for lang in de en_GB es fr it ja ko pt_BR ru zh_CN zh_TW; do msgfmt -o precli/locale/$lang/LC_MESSAGES/messages.mo precli/locale/$lang/LC_MESSAGES/messages.po; done'
 
 [testenv:clean]
 skip_install = true
