Update the pre-commit config versions
Updates to the latest versions and uses mirrors if available.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
-# Copyright 2024 Secure Sauce LLC
+# Copyright 2025 Secure Sauce LLC
 # SPDX-License-Identifier: BUSL-1.1
 exclude: ^(docs|tests|mkdocs.yml)
 repos:
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v4.6.0
+  rev: v5.0.0
   hooks:
   - id: check-yaml
   - id: debug-statements
@@ -12,19 +12,19 @@ repos:
   - id: trailing-whitespace
 
 - repo: https://github.com/asottile/reorder_python_imports
-  rev: v3.13.0
+  rev: v3.14.0
   hooks:
   - id: reorder-python-imports
     args: [--application-directories, '.:src', --py38-plus]
 
-- repo: https://github.com/psf/black
-  rev: 24.8.0
+- repo: https://github.com/psf/black-pre-commit-mirror
+  rev: 25.1.0
   hooks:
   - id: black
     args: [--line-length=79, --target-version=py311]
 
 - repo: https://github.com/asottile/pyupgrade
-  rev: v3.17.0
+  rev: v3.19.1
   hooks:
   - id: pyupgrade
     args: [--py38-plus]
