Add setupttools classifiers for translated languages
Adds each language the CLI is translated for.

Signed-off-by: Eric Brown <eric.brown@securesauce.dev>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
-# Copyright 2024 Secure Sauce LLC
+# Copyright 2025 Secure Sauce LLC
 # SPDX-License-Identifier: BUSL-1.1
 [metadata]
 name = precli
@@ -14,6 +14,17 @@ classifiers =
     Intended Audience :: Information Technology
     Intended Audience :: System Administrators
     Intended Audience :: Developers
+    Natural Language :: Chinese (Simplified)
+    Natural Language :: Chinese (Traditional)
+    Natural Language :: English
+    Natural Language :: French
+    Natural Language :: German
+    Natural Language :: Italian
+    Natural Language :: Japanese
+    Natural Language :: Korean
+    Natural Language :: Portuguese (Brazilian)
+    Natural Language :: Russian
+    Natural Language :: Spanish
     Operating System :: MacOS
     Operating System :: POSIX :: Linux
     Operating System :: Microsoft :: Windows
